@@ -1,3 +1,8 @@
+2006-12-06  Rodney Dawes  <dobey@novell.com>
+
+	* legacy-icon-mapping.xml: Some update for KDE icons (Niko Mirthes)
+	Updates for some gnome icons, and additional icons (Rodney Dawes)
+
 2005-12-16  Rodney Dawes  <dobey@novell.com>
 
 	* configure.ac: Up version to 0.6.2 for release
